--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
